@@ -1,3 +1,8 @@
+2002-02-01  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkCmds.c (Tk_TkObjCmd): don't use 'bool' as an arg as it
+	conflicts with the C99 spec. [Bug #511956] (ingham)
+
 2002-02-01  David Gravereaux <davygrvy@pobox.com>
 
 	* win/makefile.vc: unset macro located in the tktest target
